project(leetcode)

cmake_minimum_required(VERSION 3.8)

set(CMAKE_CXX_STANDARD             20)
set(CMAKE_MODULE_PATH              "${CMAKE_SOURCE_DIR}/tools/cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
set(CMAKE_EXPORT_COMPILE_COMMANDS  ON)

find_package(Catch REQUIRED)

include(tools/cmake/TestSolution.cmake)
include(tools/cmake/BuildFlags.cmake)
include_directories(tools/util)

function(add_task name)
  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/solutions/${name})
    add_subdirectory(solutions/${name})
  endif()
endfunction()

enable_testing()

add_task(01-matrix)
add_task(132-pattern)
add_task(3sum)
add_task(3sum-closest)
add_task(4sum)
add_task(account-balance-after-rounded-purchase)
add_task(add-binary)
add_task(add-digits)
add_task(add-strings)
add_task(add-to-array-form-of-integer)
add_task(add-two-integers)
add_task(add-two-numbers)
add_task(add-two-numbers-ii)
add_task(all-nodes-distance-k-in-binary-tree)
add_task(all-paths-from-source-to-target)
add_task(all-possible-full-binary-trees)
add_task(alternating-digit-sum)
add_task(apply-operations-to-an-array)
add_task(arithmetic-slices)
add_task(arithmetic-subarrays)
add_task(arranging-coins)
add_task(as-far-from-land-as-possible)
add_task(assign-cookies)
add_task(asteroid-collision)
add_task(average-of-levels-in-binary-tree)
add_task(average-salary-excluding-the-minimum-and-maximum-salary)
add_task(average-value-of-even-numbers-that-are-divisible-by-three)
add_task(avoid-flood-in-the-city)
add_task(backspace-string-compare)
add_task(balanced-binary-tree)
add_task(basic-calculator)
add_task(basic-calculator-ii)
add_task(best-poker-hand)
add_task(best-sightseeing-pair)
add_task(best-time-to-buy-and-sell-stock)
add_task(best-time-to-buy-and-sell-stock-ii)
add_task(best-time-to-buy-and-sell-stock-iii)
add_task(best-time-to-buy-and-sell-stock-iv)
add_task(best-time-to-buy-and-sell-stock-with-cooldown)
add_task(best-time-to-buy-and-sell-stock-with-transaction-fee)
add_task(binary-prefix-divisible-by-5)
add_task(binary-search)
add_task(binary-search-tree-iterator)
add_task(binary-tree-inorder-traversal)
add_task(binary-tree-level-order-traversal)
add_task(binary-tree-maximum-path-sum)
add_task(binary-tree-paths)
add_task(binary-tree-postorder-traversal)
add_task(binary-tree-preorder-traversal)
add_task(binary-tree-right-side-view)
add_task(binary-tree-zigzag-level-order-traversal)
add_task(binary-watch)
add_task(bitwise-and-of-numbers-range)
add_task(bitwise-xor-of-all-pairings)
add_task(boats-to-save-people)
add_task(buddy-strings)
add_task(build-array-where-you-can-find-the-maximum-exactly-k-comparisons)
add_task(bulb-switcher)
add_task(bulls-and-cows)
add_task(bus-routes)
add_task(buy-two-chocolates)
add_task(calculate-amount-paid-in-taxes)
add_task(calculate-delayed-arrival-time)
add_task(calculate-digit-sum-of-a-string)
add_task(can-make-arithmetic-progression-from-sequence)
add_task(can-place-flowers)
add_task(candy)
add_task(capacity-to-ship-packages-within-d-days)
add_task(categorize-box-according-to-criteria)
add_task(champagne-tower)
add_task(cheapest-flights-within-k-stops)
add_task(check-completeness-of-a-binary-tree)
add_task(check-distances-between-same-letters)
add_task(check-if-a-string-is-an-acronym-of-words)
add_task(check-if-array-is-good)
add_task(check-if-array-is-sorted-and-rotated)
add_task(check-if-it-is-a-straight-line)
add_task(check-if-matrix-is-x-matrix)
add_task(check-if-n-and-its-double-exist)
add_task(check-if-number-has-equal-digit-count-and-digit-value)
add_task(check-if-one-string-swap-can-make-strings-equal)
add_task(check-if-strings-can-be-made-equal-with-operations-i)
add_task(check-if-the-number-is-fascinating)
add_task(check-if-there-is-a-valid-partition-for-the-array)
add_task(checking-existence-of-edge-length-limited-paths)
add_task(cherry-pickup)
add_task(cherry-pickup-ii)
add_task(circular-sentence)
add_task(climbing-stairs)
add_task(clone-graph)
add_task(coin-change)
add_task(coin-change-ii)
add_task(combination-sum)
add_task(combination-sum-ii)
add_task(combination-sum-iii)
add_task(combination-sum-iv)
add_task(combinations)
add_task(complement-of-base-10-integer)
add_task(concatenation-of-array)
add_task(construct-binary-tree-from-inorder-and-postorder-traversal)
add_task(construct-binary-tree-from-preorder-and-inorder-traversal)
add_task(construct-quad-tree)
add_task(construct-the-rectangle)
add_task(container-with-most-water)
add_task(contains-duplicate)
add_task(contains-duplicate-ii)
add_task(convert-a-number-to-hexadecimal)
add_task(convert-binary-number-in-a-linked-list-to-integer)
add_task(convert-sorted-array-to-binary-search-tree)
add_task(convert-sorted-list-to-binary-search-tree)
add_task(convert-the-temperature)
add_task(copy-list-with-random-pointer)
add_task(count-all-possible-routes)
add_task(count-all-valid-pickup-and-delivery-options)
add_task(count-and-say)
add_task(count-asterisks)
add_task(count-complete-tree-nodes)
add_task(count-days-spent-together)
add_task(count-distinct-numbers-on-board)
add_task(count-good-nodes-in-binary-tree)
add_task(count-negative-numbers-in-a-sorted-matrix)
add_task(count-odd-numbers-in-an-interval-range)
add_task(count-pairs-of-similar-strings)
add_task(count-pairs-whose-sum-is-less-than-target)
add_task(count-prefixes-of-a-given-string)
add_task(count-sub-islands)
add_task(count-subarrays-with-fixed-bounds)
add_task(count-subtrees-with-max-distance-between-cities)
add_task(count-symmetric-integers)
add_task(count-the-digits-that-divide-a-number)
add_task(count-the-number-of-vowel-strings-in-range)
add_task(count-unreachable-pairs-of-nodes-in-an-undirected-graph)
add_task(count-ways-to-build-good-strings)
add_task(counting-bits)
add_task(course-schedule)
add_task(course-schedule-ii)
add_task(create-binary-tree-from-descriptions)
add_task(daily-temperatures)
add_task(day-of-the-week)
add_task(day-of-the-year)
add_task(decode-string)
add_task(decode-the-message)
add_task(decode-ways)
add_task(decoded-string-at-index)
add_task(decrypt-string-from-alphabet-to-integer-mapping)
add_task(defanging-an-ip-address)
add_task(delete-and-earn)
add_task(delete-columns-to-make-sorted)
add_task(delete-greatest-value-in-each-row)
add_task(delete-node-in-a-bst)
add_task(delete-node-in-a-linked-list)
add_task(delete-operation-for-two-strings)
add_task(delete-the-middle-node-of-a-linked-list)
add_task(design-add-and-search-words-data-structure)
add_task(design-authentication-manager)
add_task(design-browser-history)
add_task(design-circular-queue)
add_task(design-hashmap)
add_task(design-hashset)
add_task(design-linked-list)
add_task(design-parking-system)
add_task(design-underground-system)
add_task(determine-if-two-events-have-conflict)
add_task(determine-if-two-strings-are-close)
add_task(determine-the-winner-of-a-bowling-game)
add_task(determine-whether-matrix-can-be-obtained-by-rotation)
add_task(detonate-the-maximum-bombs)
add_task(di-string-match)
add_task(diameter-of-binary-tree)
add_task(difference-between-element-sum-and-digit-sum-of-an-array)
add_task(distance-between-bus-stops)
add_task(distinct-subsequences)
add_task(distribute-candies-to-people)
add_task(distribute-money-to-maximum-children)
add_task(divisible-and-non-divisible-sums-difference)
add_task(divisor-game)
add_task(domino-and-tromino-tiling)
add_task(dota2-senate)
add_task(duplicate-zeros)
add_task(earliest-possible-day-of-full-bloom)
add_task(edit-distance)
add_task(equal-row-and-column-pairs)
add_task(evaluate-boolean-binary-tree)
add_task(evaluate-division)
add_task(evaluate-reverse-polish-notation)
add_task(excel-sheet-column-number)
add_task(excel-sheet-column-title)
add_task(extra-characters-in-a-string)
add_task(factorial-trailing-zeroes)
add_task(fair-distribution-of-cookies)
add_task(faulty-keyboard)
add_task(fibonacci-number)
add_task(find-a-peak-element-ii)
add_task(find-all-anagrams-in-a-string)
add_task(find-all-lonely-numbers-in-the-array)
add_task(find-all-numbers-disappeared-in-an-array)
add_task(find-center-of-star-graph)
add_task(find-closest-number-to-zero)
add_task(find-common-characters)
add_task(find-critical-and-pseudo-critical-edges-in-minimum-spanning-tree)
add_task(find-duplicate-subtrees)
add_task(find-eventual-safe-states)
add_task(find-first-and-last-position-of-element-in-sorted-array)
add_task(find-in-mountain-array)
add_task(find-indices-with-index-and-value-difference-i)
add_task(find-k-closest-elements)
add_task(find-k-pairs-with-smallest-sums)
add_task(find-latest-group-of-size-m)
add_task(find-maximum-number-of-string-pairs)
add_task(find-median-from-data-stream)
add_task(find-minimum-in-rotated-sorted-array)
add_task(find-minimum-in-rotated-sorted-array-ii)
add_task(find-nearest-point-that-has-the-same-x-or-y-coordinate)
add_task(find-peak-element)
add_task(find-pivot-index)
add_task(find-resultant-array-after-removing-anagrams)
add_task(find-right-interval)
add_task(find-smallest-letter-greater-than-target)
add_task(find-subarrays-with-equal-sum)
add_task(find-the-array-concatenation-value)
add_task(find-the-difference)
add_task(find-the-difference-of-two-arrays)
add_task(find-the-distance-value-between-two-arrays)
add_task(find-the-distinct-difference-array)
add_task(find-the-divisibility-array-of-a-string)
add_task(find-the-duplicate-number)
add_task(find-the-highest-altitude)
add_task(find-the-index-of-the-first-occurrence-in-a-string)
add_task(find-the-k-beauty-of-a-number)
add_task(find-the-longest-balanced-substring-of-a-binary-string)
add_task(find-the-longest-valid-obstacle-course-at-each-position)
add_task(find-the-losers-of-the-circular-game)
add_task(find-the-maximum-achievable-number)
add_task(find-the-maximum-divisibility-score)
add_task(find-the-maximum-number-of-marked-indices)
add_task(find-the-minimum-and-maximum-number-of-nodes-between-critical-points)
add_task(find-the-pivot-integer)
add_task(find-the-smallest-divisor-given-a-threshold)
add_task(find-the-student-that-will-replace-the-chalk)
add_task(find-the-town-judge)
add_task(find-the-width-of-columns-of-a-grid)
add_task(find-the-winner-of-the-circular-game)
add_task(find-words-that-can-be-formed-by-characters)
add_task(first-bad-version)
add_task(first-letter-to-appear-twice)
add_task(first-missing-positive)
add_task(first-unique-character-in-a-string)
add_task(fizz-buzz)
add_task(flatten-binary-tree-to-linked-list)
add_task(flatten-nested-list-iterator)
add_task(flood-fill)
add_task(form-smallest-number-from-two-digit-arrays)
add_task(frequency-of-the-most-frequent-element)
add_task(frog-jump)
add_task(furthest-point-from-origin)
add_task(game-of-life)
add_task(gas-station)
add_task(generate-parentheses)
add_task(goal-parser-interpretation)
add_task(gray-code)
add_task(greatest-common-divisor-of-strings)
add_task(greatest-english-letter-in-upper-and-lower-case)
add_task(group-anagrams)
add_task(group-the-people-given-the-group-size-they-belong-to)
add_task(guess-number-higher-or-lower)
add_task(guess-the-word)
add_task(h-index)
add_task(h-index-ii)
add_task(hamming-distance)
add_task(happy-number)
add_task(height-checker)
add_task(house-robber)
add_task(house-robber-ii)
add_task(implement-queue-using-stacks)
add_task(implement-stack-using-queues)
add_task(implement-trie-prefix-tree)
add_task(increasing-triplet-subsequence)
add_task(increment-submatrices-by-one)
add_task(insert-delete-getrandom-o1)
add_task(insert-interval)
add_task(insert-into-a-binary-search-tree)
add_task(integer-break)
add_task(integer-to-roman)
add_task(interleaving-string)
add_task(intersection-of-multiple-arrays)
add_task(intersection-of-two-arrays)
add_task(intersection-of-two-arrays-ii)
add_task(intersection-of-two-linked-lists)
add_task(interval-list-intersections)
add_task(invert-binary-tree)
add_task(ipo)
add_task(is-graph-bipartite)
add_task(is-subsequence)
add_task(island-perimeter)
add_task(isomorphic-strings)
add_task(jewels-and-stones)
add_task(jump-game)
add_task(jump-game-ii)
add_task(jump-game-iii)
add_task(jump-game-iv)
add_task(k-closest-points-to-origin)
add_task(k-items-with-the-maximum-sum)
add_task(k-radius-subarray-averages)
add_task(keyboard-row)
add_task(keys-and-rooms)
add_task(kids-with-the-greatest-number-of-candies)
add_task(knight-probability-in-chessboard)
add_task(koko-eating-bananas)
add_task(kth-largest-element-in-a-stream)
add_task(kth-largest-element-in-an-array)
add_task(kth-missing-positive-number)
add_task(kth-smallest-element-in-a-bst)
add_task(largest-3-same-digit-number-in-string)
add_task(largest-color-value-in-a-directed-graph)
add_task(largest-local-values-in-a-matrix)
add_task(largest-number-after-digit-swaps-by-parity)
add_task(largest-number-at-least-twice-of-others)
add_task(largest-perimeter-triangle)
add_task(largest-positive-integer-that-exists-with-its-negative)
add_task(largest-rectangle-in-histogram)
add_task(largest-time-for-given-digits)
add_task(last-day-where-you-can-still-cross)
add_task(last-stone-weight)
add_task(last-visited-integers)
add_task(leaf-similar-trees)
add_task(left-and-right-sum-differences)
add_task(lemonade-change)
add_task(length-of-last-word)
add_task(letter-case-permutation)
add_task(letter-combinations-of-a-phone-number)
add_task(lexicographically-smallest-palindrome)
add_task(license-key-formatting)
add_task(linked-list-cycle)
add_task(linked-list-cycle-ii)
add_task(linked-list-in-binary-tree)
add_task(linked-list-random-node)
add_task(longest-alternating-subarray)
add_task(longest-arithmetic-subsequence)
add_task(longest-arithmetic-subsequence-of-given-difference)
add_task(longest-common-prefix)
add_task(longest-common-subsequence)
add_task(longest-consecutive-sequence)
add_task(longest-cycle-in-a-graph)
add_task(longest-even-odd-subarray-with-threshold)
add_task(longest-ideal-subsequence)
add_task(longest-increasing-subsequence)
add_task(longest-palindrome)
add_task(longest-palindrome-by-concatenating-two-letter-words)
add_task(longest-palindromic-subsequence)
add_task(longest-palindromic-substring)
add_task(longest-path-with-different-adjacent-characters)
add_task(longest-repeating-character-replacement)
add_task(longest-string-chain)
add_task(longest-subarray-of-1s-after-deleting-one-element)
add_task(longest-subsequence-with-limited-sum)
add_task(longest-substring-without-repeating-characters)
add_task(longest-valid-parentheses)
add_task(longest-zigzag-path-in-a-binary-tree)
add_task(lowest-common-ancestor-of-a-binary-search-tree)
add_task(lowest-common-ancestor-of-a-binary-tree)
add_task(lru-cache)
add_task(magnetic-force-between-two-balls)
add_task(majority-element)
add_task(majority-element-ii)
add_task(make-array-strictly-increasing)
add_task(make-array-zero-by-subtracting-equal-amounts)
add_task(matrix-block-sum)
add_task(matrix-cells-in-distance-order)
add_task(matrix-diagonal-sum)
add_task(max-area-of-island)
add_task(max-consecutive-ones)
add_task(max-consecutive-ones-iii)
add_task(max-dot-product-of-two-subsequences)
add_task(max-number-of-k-sum-pairs)
add_task(max-pair-sum-in-an-array)
add_task(max-points-on-a-line)
add_task(maximal-network-rank)
add_task(maximal-rectangle)
add_task(maximal-square)
add_task(maximize-score-after-n-operations)
add_task(maximize-sum-of-array-after-k-negations)
add_task(maximize-the-confusion-of-an-exam)
add_task(maximum-average-subarray-i)
add_task(maximum-count-of-positive-integer-and-negative-integer)
add_task(maximum-depth-of-binary-tree)
add_task(maximum-difference-by-remapping-a-digit)
add_task(maximum-distance-between-a-pair-of-values)
add_task(maximum-enemy-forts-that-can-be-captured)
add_task(maximum-frequency-stack)
add_task(maximum-length-of-pair-chain)
add_task(maximum-length-of-subarray-with-positive-product)
add_task(maximum-level-sum-of-a-binary-tree)
add_task(maximum-number-of-achievable-transfer-requests)
add_task(maximum-number-of-balloons)
add_task(maximum-number-of-events-that-can-be-attended-ii)
add_task(maximum-number-of-pairs-in-array)
add_task(maximum-number-of-removable-characters)
add_task(maximum-number-of-vowels-in-a-substring-of-given-length)
add_task(maximum-odd-binary-number)
add_task(maximum-performance-of-a-team)
add_task(maximum-product-subarray)
add_task(maximum-profit-in-job-scheduling)
add_task(maximum-running-time-of-n-computers)
add_task(maximum-score-words-formed-by-letters)
add_task(maximum-side-length-of-a-square-with-sum-less-than-or-equal-to-threshold)
add_task(maximum-subarray)
add_task(maximum-subsequence-score)
add_task(maximum-sum-circular-subarray)
add_task(maximum-sum-with-exactly-k-elements)
add_task(maximum-twin-sum-of-a-linked-list)
add_task(maximum-value-at-a-given-index-in-a-bounded-array)
add_task(maximum-value-of-a-string-in-an-array)
add_task(maximum-value-of-an-ordered-triplet-i)
add_task(maximum-value-of-k-coins-from-piles)
add_task(maximum-width-of-binary-tree)
add_task(median-of-two-sorted-arrays)
add_task(merge-intervals)
add_task(merge-k-sorted-lists)
add_task(merge-similar-items)
add_task(merge-sorted-array)
add_task(merge-strings-alternately)
add_task(merge-two-2d-arrays-by-summing-values)
add_task(merge-two-binary-trees)
add_task(merge-two-sorted-lists)
add_task(middle-of-the-linked-list)
add_task(min-cost-climbing-stairs)
add_task(min-cost-to-connect-all-points)
add_task(min-max-game)
add_task(min-stack)
add_task(minimize-deviation-in-array)
add_task(minimize-maximum-of-array)
add_task(minimize-string-length)
add_task(minimize-the-maximum-difference-of-pairs)
add_task(minimum-absolute-difference-in-bst)
add_task(minimum-absolute-sum-difference)
add_task(minimum-amount-of-time-to-fill-cups)
add_task(minimum-ascii-delete-sum-for-two-strings)
add_task(minimum-common-value)
add_task(minimum-cost-for-tickets)
add_task(minimum-cost-to-cut-a-stick)
add_task(minimum-cost-to-make-array-equal)
add_task(minimum-cost-to-move-chips-to-the-same-position)
add_task(minimum-cuts-to-divide-a-circle)
add_task(minimum-deletions-to-make-character-frequencies-unique)
add_task(minimum-depth-of-binary-tree)
add_task(minimum-distance-between-bst-nodes)
add_task(minimum-falling-path-sum)
add_task(minimum-flips-to-make-a-or-b-equal-to-c)
add_task(minimum-genetic-mutation)
add_task(minimum-hours-of-training-to-win-a-competition)
add_task(minimum-index-sum-of-two-lists)
add_task(minimum-insertion-steps-to-make-a-string-palindrome)
add_task(minimum-jumps-to-reach-home)
add_task(minimum-limit-of-balls-in-a-bag)
add_task(minimum-number-of-arrows-to-burst-balloons)
add_task(minimum-number-of-days-to-make-m-bouquets)
add_task(minimum-number-of-flips-to-convert-binary-matrix-to-zero-matrix)
add_task(minimum-number-of-increments-on-subarrays-to-form-a-target-array)
add_task(minimum-number-of-operations-to-make-array-continuous)
add_task(minimum-number-of-taps-to-open-to-water-a-garden)
add_task(minimum-number-of-vertices-to-reach-all-nodes)
add_task(minimum-one-bit-operations-to-make-integers-zero)
add_task(minimum-operations-to-collect-elements)
add_task(minimum-operations-to-reduce-x-to-zero)
add_task(minimum-path-sum)
add_task(minimum-penalty-for-a-shop)
add_task(minimum-recolors-to-get-k-consecutive-black-blocks)
add_task(minimum-remove-to-make-valid-parentheses)
add_task(minimum-replacements-to-sort-the-array)
add_task(minimum-right-shifts-to-sort-the-array)
add_task(minimum-score-of-a-path-between-two-cities)
add_task(minimum-size-subarray-sum)
add_task(minimum-speed-to-arrive-on-time)
add_task(minimum-string-length-after-removing-substrings)
add_task(minimum-time-to-complete-trips)
add_task(minimum-time-to-visit-a-cell-in-a-grid)
add_task(minimum-window-substring)
add_task(missing-number)
add_task(monotonic-array)
add_task(most-frequent-even-element)
add_task(most-profit-assigning-work)
add_task(most-stones-removed-with-same-row-or-column)
add_task(move-zeroes)
add_task(multiply-strings)
add_task(my-calendar-i)
add_task(my-calendar-ii)
add_task(my-calendar-iii)
add_task(n-ary-tree-level-order-traversal)
add_task(n-ary-tree-preorder-traversal)
add_task(n-queens)
add_task(n-queens-ii)
add_task(n-repeated-element-in-size-2n-array)
add_task(n-th-tribonacci-number)
add_task(nearest-exit-from-entrance-in-maze)
add_task(neither-minimum-nor-maximum)
add_task(new-21-game)
add_task(next-greater-element-i)
add_task(next-greater-element-ii)
add_task(next-greater-element-iii)
add_task(next-permutation)
add_task(nim-game)
add_task(non-overlapping-intervals)
add_task(number-complement)
add_task(number-of-1-bits)
add_task(number-of-arithmetic-triplets)
add_task(number-of-beautiful-pairs)
add_task(number-of-closed-islands)
add_task(number-of-common-factors)
add_task(number-of-digit-one)
add_task(number-of-distinct-averages)
add_task(number-of-employees-who-met-the-target)
add_task(number-of-enclaves)
add_task(number-of-equivalent-domino-pairs)
add_task(number-of-even-and-odd-bits)
add_task(number-of-flowers-in-full-bloom)
add_task(number-of-good-pairs)
add_task(number-of-increasing-paths-in-a-grid)
add_task(number-of-islands)
add_task(number-of-longest-increasing-subsequence)
add_task(number-of-music-playlists)
add_task(number-of-operations-to-make-network-connected)
add_task(number-of-provinces)
add_task(number-of-recent-calls)
add_task(number-of-segments-in-a-string)
add_task(number-of-senior-citizens)
add_task(number-of-submatrices-that-sum-to-target)
add_task(number-of-subsequences-that-satisfy-the-given-sum-condition)
add_task(number-of-unequal-triplets-in-array)
add_task(number-of-valid-clock-times)
add_task(number-of-visible-people-in-a-queue)
add_task(number-of-ways-of-cutting-a-pizza)
add_task(number-of-ways-to-form-a-target-string-given-a-dictionary)
add_task(number-of-ways-to-reorder-array-to-get-same-bst)
add_task(number-of-ways-to-stay-in-the-same-place-after-some-steps)
add_task(number-of-zero-filled-subarrays)
add_task(occurrences-after-bigram)
add_task(odd-even-linked-list)
add_task(odd-string-difference)
add_task(online-election)
add_task(online-stock-span)
add_task(open-the-lock)
add_task(optimal-partition-of-string)
add_task(orderly-queue)
add_task(pacific-atlantic-water-flow)
add_task(painting-the-walls)
add_task(palindrome-linked-list)
add_task(palindrome-number)
add_task(palindrome-partitioning)
add_task(parallel-courses-ii)
add_task(parallel-courses-iii)
add_task(partition-equal-subset-sum)
add_task(partition-labels)
add_task(partition-list)
add_task(pascals-triangle)
add_task(pascals-triangle-ii)
add_task(pass-the-pillow)
add_task(path-sum)
add_task(path-sum-ii)
add_task(path-sum-iii)
add_task(path-with-maximum-probability)
add_task(path-with-minimum-effort)
add_task(peak-index-in-a-mountain-array)
add_task(percentage-of-letter-in-string)
add_task(perfect-squares)
add_task(permutation-in-string)
add_task(permutation-sequence)
add_task(permutations)
add_task(permutations-ii)
add_task(plus-one)
add_task(points-that-intersect-with-cars)
add_task(populating-next-right-pointers-in-each-node)
add_task(populating-next-right-pointers-in-each-node-ii)
add_task(possible-bipartition)
add_task(power-of-four)
add_task(power-of-three)
add_task(power-of-two)
add_task(powx-n)
add_task(predict-the-winner)
add_task(prime-arrangements)
add_task(prime-in-diagonal)
add_task(prime-number-of-set-bits-in-binary-representation)
add_task(product-of-array-except-self)
add_task(product-of-the-last-k-numbers)
add_task(profitable-schemes)
add_task(put-marbles-in-bags)
add_task(random-pick-with-weight)
add_task(range-sum-of-sorted-subarray-sums)
add_task(range-sum-query-2d-immutable)
add_task(range-sum-query-immutable)
add_task(ransom-note)
add_task(rearrange-characters-to-make-target-string)
add_task(reconstruct-itinerary)
add_task(recover-a-tree-from-preorder-traversal)
add_task(recover-binary-search-tree)
add_task(reducing-dishes)
add_task(regular-expression-matching)
add_task(relative-sort-array)
add_task(remove-all-adjacent-duplicates-in-string)
add_task(remove-colored-pieces-if-both-neighbors-are-the-same-color)
add_task(remove-digit-from-number-to-maximize-result)
add_task(remove-duplicate-letters)
add_task(remove-duplicates-from-sorted-array)
add_task(remove-duplicates-from-sorted-array-ii)
add_task(remove-duplicates-from-sorted-list)
add_task(remove-duplicates-from-sorted-list-ii)
add_task(remove-element)
add_task(remove-letter-to-equalize-frequency)
add_task(remove-linked-list-elements)
add_task(remove-max-number-of-edges-to-keep-graph-fully-traversable)
add_task(remove-nth-node-from-end-of-list)
add_task(remove-outermost-parentheses)
add_task(remove-trailing-zeros-from-a-string)
add_task(removing-stars-from-a-string)
add_task(reorder-list)
add_task(reorder-routes-to-make-all-paths-lead-to-the-city-zero)
add_task(reorganize-string)
add_task(repeated-dna-sequences)
add_task(repeated-string-match)
add_task(repeated-substring-pattern)
add_task(reshape-the-matrix)
add_task(restore-ip-addresses)
add_task(restore-the-array)
add_task(reverse-bits)
add_task(reverse-integer)
add_task(reverse-linked-list)
add_task(reverse-linked-list-ii)
add_task(reverse-nodes-in-k-group)
add_task(reverse-string)
add_task(reverse-vowels-of-a-string)
add_task(reverse-words-in-a-string)
add_task(reverse-words-in-a-string-iii)
add_task(richest-customer-wealth)
add_task(roman-to-integer)
add_task(root-equals-sum-of-children)
add_task(rotate-array)
add_task(rotate-image)
add_task(rotate-list)
add_task(rotate-string)
add_task(rotting-oranges)
add_task(row-with-maximum-ones)
add_task(running-sum-of-1d-array)
add_task(same-tree)
add_task(scramble-string)
add_task(search-a-2d-matrix)
add_task(search-a-2d-matrix-ii)
add_task(search-in-a-binary-search-tree)
add_task(search-in-rotated-sorted-array)
add_task(search-in-rotated-sorted-array-ii)
add_task(search-insert-position)
add_task(search-suggestions-system)
add_task(seat-reservation-manager)
add_task(self-dividing-numbers)
add_task(sell-diminishing-valued-colored-balls)
add_task(semi-ordered-permutation)
add_task(separate-the-digits-in-an-array)
add_task(sequentially-ordinal-rank-tracker)
add_task(serialize-and-deserialize-binary-tree)
add_task(set-matrix-zeroes)
add_task(shift-2d-grid)
add_task(shortest-bridge)
add_task(shortest-completing-word)
add_task(shortest-distance-to-target-string-in-a-circular-array)
add_task(shortest-impossible-sequence-of-rolls)
add_task(shortest-path-in-binary-matrix)
add_task(shortest-path-to-get-all-keys)
add_task(shortest-path-visiting-all-nodes)
add_task(shortest-path-with-alternating-colors)
add_task(shortest-subarray-to-be-removed-to-make-array-sorted)
add_task(shuffle-an-array)
add_task(sign-of-the-product-of-an-array)
add_task(similar-string-groups)
add_task(simplify-path)
add_task(single-element-in-a-sorted-array)
add_task(single-number)
add_task(single-number-ii)
add_task(single-number-iii)
add_task(sliding-puzzle)
add_task(sliding-window-maximum)
add_task(smallest-even-multiple)
add_task(smallest-number-in-infinite-set)
add_task(smallest-range-i)
add_task(smallest-range-ii)
add_task(smallest-subsequence-of-distinct-characters)
add_task(smallest-sufficient-team)
add_task(snakes-and-ladders)
add_task(snapshot-array)
add_task(solving-questions-with-brainpower)
add_task(sort-an-array)
add_task(sort-array-by-parity)
add_task(sort-characters-by-frequency)
add_task(sort-colors)
add_task(sort-integers-by-the-number-of-1-bits)
add_task(sort-items-by-groups-respecting-dependencies)
add_task(sort-list)
add_task(sort-the-people)
add_task(soup-servings)
add_task(special-array-with-x-elements-greater-than-or-equal-x)
add_task(spiral-matrix)
add_task(spiral-matrix-ii)
add_task(split-a-string-in-balanced-strings)
add_task(split-linked-list-in-parts)
add_task(split-strings-by-separator)
add_task(split-with-minimum-sum)
add_task(sqrtx)
add_task(squares-of-a-sorted-array)
add_task(stone-game-ii)
add_task(stone-game-iii)
add_task(strange-printer)
add_task(string-compression)
add_task(string-to-integer-atoi)
add_task(strong-password-checker-ii)
add_task(subarray-product-less-than-k)
add_task(subarray-sum-equals-k)
add_task(subsets)
add_task(subsets-ii)
add_task(substring-with-concatenation-of-all-words)
add_task(substring-with-largest-variance)
add_task(subtract-the-product-and-sum-of-digits-of-an-integer)
add_task(subtree-of-another-tree)
add_task(successful-pairs-of-spells-and-potions)
add_task(sudoku-solver)
add_task(sum-multiples)
add_task(sum-of-all-odd-length-subarrays)
add_task(sum-of-left-leaves)
add_task(sum-of-mutated-array-closest-to-target)
add_task(sum-of-root-to-leaf-binary-numbers)
add_task(sum-of-square-numbers)
add_task(sum-of-squares-of-special-elements)
add_task(sum-of-values-at-indices-with-k-set-bits)
add_task(sum-root-to-leaf-numbers)
add_task(summary-ranges)
add_task(surrounded-regions)
add_task(swap-nodes-in-pairs)
add_task(swapping-nodes-in-a-linked-list)
add_task(symmetric-tree)
add_task(take-gifts-from-the-richest-pile)
add_task(tallest-billboard)
add_task(task-scheduler)
add_task(text-justification)
add_task(the-employee-that-worked-on-the-longest-task)
add_task(the-k-weakest-rows-in-a-matrix)
add_task(third-maximum-number)
add_task(time-based-key-value-store)
add_task(time-needed-to-inform-all-employees)
add_task(to-lower-case)
add_task(toeplitz-matrix)
add_task(top-k-frequent-elements)
add_task(top-k-frequent-words)
add_task(total-cost-to-hire-k-workers)
add_task(total-distance-traveled)
add_task(trapping-rain-water)
add_task(triangle)
add_task(two-sum)
add_task(two-sum-ii-input-array-is-sorted)
add_task(two-sum-iv-input-is-a-bst)
add_task(ugly-number)
add_task(ugly-number-ii)
add_task(ugly-number-iii)
add_task(uncrossed-lines)
add_task(unique-binary-search-trees)
add_task(unique-binary-search-trees-ii)
add_task(unique-number-of-occurrences)
add_task(unique-paths)
add_task(unique-paths-ii)
add_task(unique-paths-iii)
add_task(univalued-binary-tree)
add_task(valid-anagram)
add_task(valid-boomerang)
add_task(valid-number)
add_task(valid-palindrome)
add_task(valid-parentheses)
add_task(valid-perfect-square)
add_task(valid-sudoku)
add_task(valid-triangle-number)
add_task(validate-binary-search-tree)
add_task(validate-binary-tree-nodes)
add_task(validate-stack-sequences)
add_task(verifying-an-alien-dictionary)
add_task(water-and-jug-problem)
add_task(ways-to-split-array-into-three-subarrays)
add_task(where-will-the-ball-fall)
add_task(wiggle-subsequence)
add_task(wildcard-matching)
add_task(word-break)
add_task(word-ladder)
add_task(word-ladder-ii)
add_task(word-pattern)
add_task(word-search)
add_task(word-search-ii)
add_task(zigzag-conversion)
